manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82268320-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82268320.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82268320
            port:
              number: 8080
        pathType: Prefix
